2004-12-23  Sebastien Bacher  <seb128@debian.org>

	* gnome-about-me.glade: fixed a typo (Closes: #162094).